--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="login">
+    <div class="card">
+        <div class="card-body">
+            <form>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">
+                        <i class="bi bi-person-fill"></i>
+                    </span>
+                    <input type="text" class="form-control" placeholder="Usuario">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">
+                        <i class="bi bi-key-fill"></i>
+                    </span>
+                    <input type="password" class="form-control" placeholder="Contraseña">
+                </div>
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary" type="button">Iniciar Sesion</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
