--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,31 +1,29 @@
-<!-- <nav class="nav-container">
-    <div class="nav-item">
-        <a routerLink="/">Inicio</a>
-    </div>
-    <div class="nav-item">
-        <a routerLink="/diagnostico">Diagnostico</a>
-    </div>
-    <div class="nav-item">
-        <a routerLink="/referidos">Referidos</a>
-    </div>
-</nav> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="/">Incio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/diagnostico">Diagnostico</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/referidos">Referidos</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+      aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarColor01">
+      <ul class="navbar-nav">
+        <!-- <li class="nav-item">
+          <a class="nav-link active" routerLink="/">Incio</a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/diagnostico" routerLinkActive="active">Diagnostico</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/referidos" routerLinkActive="active">Referidos</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <span class="nav-link" style="cursor: pointer;">{{ name }}</span>
+        </li>
+        <li class="nav-item">
+          <span class="nav-link" style="cursor: pointer;" (click)="logOut()">Salir</span>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
