--- a/src/app/components/medic/medic.component.html
+++ b/src/app/components/medic/medic.component.html
@@ -1,1 +1,75 @@
-<p>medic works!</p>
+<div class="row mx-4">
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body">
+                <form (ngSubmit)="onSubmit()">
+                    <input type="hidden" name="id" [(ngModel)]="user.id" />
+                    <div class="mb-3">
+                        <label class="form-label">Nombres:</label>
+                        <input
+                            type="text"
+                            name="firstName"
+                            class="form-control"
+                            required
+                            [(ngModel)]="user.firstName"
+                        />
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastName" class="form-label">Apellidos:</label>
+                        <input
+                            type="text"
+                            name="lastName"
+                            class="form-control"
+                            required
+                            [(ngModel)]="user.lastName"
+                        />
+                    </div>
+                    <div class="mb-3">
+                        <label for="contactCenter" class="form-label"
+                            >Centro de atención:</label
+                        >
+                        <input
+                            type="text"
+                            name="contactCenter"
+                            class="form-control"
+                            required
+                            [(ngModel)]="user.contactCenter"
+                        />
+                    </div>
+                    <button type="submit" class="btn" [ngClass]="{'btn-info': !user.id, 'btn-warning': user.id}">
+                        {{ user.id ? 'Actualizar' : 'Registrar' }}
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Nombres</th>
+                    <th scope="col">Apellidos</th>
+                    <th scope="col">Centro de Atención</th>
+                    <th scope="col">Acción</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let u of users">
+                    <td>{{ u.id }}</td>
+                    <td>{{ u.firstName }}</td>
+                    <td>{{ u.lastName }}</td>
+                    <td>{{ u.contactCenter }}</td>
+                    <td>
+                        <button class="btn btn-secondary btn-sm" (click)="handleEdit(u)">
+                            <i class="bi" [ngClass]="{'bi-x': user.id === u.id, 'bi-pencil-fill': !user.id }"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" (click)="deleteUser(u.id!)">
+                            <i class="bi bi-trash-fill"></i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
