--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,22 +6,30 @@
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarColor01">
       <ul class="navbar-nav">
-        <!-- <li class="nav-item">
-          <a class="nav-link active" routerLink="/">Incio</a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link" routerLink="/diagnostico" routerLinkActive="active">Diagnostico</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/referidos" routerLinkActive="active">Referidos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/antecedentes" routerLinkActive="active">Antecedentes</a>
+        </li>
       </ul>
+      <div class="nav-item">
+        <h4 style="color: white;">¡Bienvenido a Predimed, &nbsp; {{ name }}!</h4>
+      </div>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <span class="nav-link" style="cursor: pointer;">{{ name }}</span>
+          <span class="nav-link" style="cursor: pointer;">
+            <!-- <img src="assets/doctor.png" alt="doctor" width="48px" height="48px"> -->
+            <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
+          </span>
         </li>
         <li class="nav-item">
-          <span class="nav-link" style="cursor: pointer;" (click)="logOut()">Salir</span>
+          <span class="nav-link" style="cursor: pointer;" (click)="logOut()">
+            <i class="bi bi-box-arrow-in-left" style="font-size: 2rem;"></i>
+          </span>
         </li>
       </ul>
     </div>
