Opcion ver credenciales agregada

--- a/src/app/components/diagnostic/diagnostic.component.html
+++ b/src/app/components/diagnostic/diagnostic.component.html
@@ -25,7 +25,7 @@
             <input type="text" class="form-control form-control-sm" [value]="gender" disabled>
         </div>
         <div class="col-auto align-self-end">
-            <button class="btn btn-warning btn-sm" disabled>Antecedentes</button>
+            <button class="btn btn-primary btn-sm" disabled>Antecedentes</button>
         </div>
     </div>
     <form>
