Added Incidences and References views as Administrator

--- a/src/app/components/diagnostic/diagnostic.component.css
+++ b/src/app/components/diagnostic/diagnostic.component.css
@@ -84,6 +84,7 @@ body {
     width: 25%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .input-block-large{
