--- a/src/app/components/incidence-admin/incidence-admin.component.html
+++ b/src/app/components/incidence-admin/incidence-admin.component.html
@@ -2,7 +2,7 @@
     <div class="elemnts-search">
         <section class="left-elements">
             <mat-form-field appearance="standard">
-                <mat-label>DNI</mat-label>
+                <mat-label>Doc. Médico</mat-label>
                 <input matInput (keyup)="applyFilter($event)" placeholder="Ejm. 76871372" #input>
             </mat-form-field>
         </section>
@@ -11,26 +11,31 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <!-- Position Column -->
-            <ng-container matColumnDef="position">
-                <th mat-header-cell *matHeaderCellDef> Número de Referencia </th>
-                <td mat-cell *matCellDef="let element"> {{element.idReference}} </td>
+            <ng-container matColumnDef="idIncidence">
+                <th mat-header-cell *matHeaderCellDef> ID </th>
+                <td mat-cell *matCellDef="let element"> {{element.idIncidence}} </td>
             </ng-container>
         
             <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Paciente </th>
-                <td mat-cell *matCellDef="let element"> {{element.patient}} </td>
+            <ng-container matColumnDef="dniDoctor">
+                <th mat-header-cell *matHeaderCellDef> Doc. Médico </th>
+                <td mat-cell *matCellDef="let element"> {{element.dniDoctor}} </td>
             </ng-container>
         
             <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-                <th mat-header-cell *matHeaderCellDef> DNI </th>
-                <td mat-cell *matCellDef="let element"> {{element.dni}} </td>
+            <ng-container matColumnDef="type">
+                <th mat-header-cell *matHeaderCellDef> Tipo </th>
+                <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="state">
+                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                <td mat-cell *matCellDef="let element"> {{element.state}} </td>
             </ng-container>
         
             <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-                <th mat-header-cell *matHeaderCellDef> Detalle </th>
+            <ng-container matColumnDef="details">
+                <th mat-header-cell *matHeaderCellDef> Detalles </th>
                 <td mat-cell *matCellDef="let element"> 
                     <button type="button" class="btn-view" (click)="onView()">Ver</button>
                 </td>
