--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
       aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,6 +6,9 @@
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarColor01">
       <ul class="navbar-nav">
+        <li *ngIf="isAdmin" class="nav-item">
+          <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Registro</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/diagnostico" routerLinkActive="active">Diagnostico</a>
         </li>
@@ -15,9 +18,18 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/antecedentes" routerLinkActive="active">Antecedentes</a>
         </li>
+        <li *ngIf="isAdmin" class="nav-item">
+          <a class="nav-link" routerLink="/incidenciaAdmin" routerLinkActive="active">Incidencias</a>
+        </li>
+        <li *ngIf="!isAdmin" class="nav-item">
+          <a class="nav-link" routerLink="/incidenciaDetalle" routerLinkActive="active">Incidencias</a>
+        </li>
       </ul>
       <div class="nav-item">
-        <h4 style="color: white;">¡Bienvenido a Predimed, &nbsp; {{ name }}!</h4>
+        <h3 style="color: white;">¡Bienvenido a Predimed, &nbsp; {{ name }}!</h3>
+      </div>
+      <div class="nav-item">
+        <h4 style="color: white;"> Centro de Salud: Las Delicias de Villa</h4>
       </div>
       <ul class="navbar-nav">
         <li class="nav-item">
